--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -5,8 +5,8 @@
 
 
         OnMetal Production Capacity Dashboard: https://onmetal.ohthree.com/iad-m0002
-    logrotate:
-        daysToKeep: 30
+    build-discarder:
+        days-to-keep: 30
     node: 'slaves'
     parameters:
         - choice:
@@ -46,8 +46,8 @@
 
 - job-template:
     name: 'OnMetal-AIO-{deploy-action}'
-    logrotate:
-        daysToKeep: 30
+    build-discarder:
+        days-to-keep: 30
     node: 'slaves'
     parameters:
         - string:
@@ -82,6 +82,7 @@
         - ansicolor:
             colormap: xterm
     builders:
+        - install-ansible
         - onmetal-aio-action-builder
 
 - project:
@@ -126,8 +127,7 @@
         - osa-ops-scm
 
 - builder:
-    name: onmetal-aio-build-host-builder
-    description: Creates an OnMetal cloud server.
+    name: install-ansible
     builders:
         - shell: |
             #!/bin/bash
@@ -136,7 +136,15 @@
             fi
             source .venv/bin/activate
             pip install ansible pyrax
-            pip install ansible pyrax
+
+- builder:
+    name: onmetal-aio-build-host-builder
+    description: Creates an OnMetal cloud server.
+    builders:
+        - shell: |
+            #!/bin/bash
+            source .venv/bin/activate
+
             export ANSIBLE_FORCE_COLOR=true
             export RAX_CREDS_FILE=~/.rackspace_cloud_credentials
             export RAX_REGION=$REGION
@@ -150,13 +158,9 @@
     builders:
         - shell: |
             #!/bin/bash
-            if [[ ! -d ".venv" ]]; then
-                virtualenv .venv
-            fi
             source .venv/bin/activate
-            pip install ansible pyrax
             cd rax-ansible-testing
-            pip install ansible pyrax
+
             export ANSIBLE_FORCE_COLOR=true
             export RAX_CREDS_FILE=~/.rackspace_cloud_credentials
             export RAX_REGION=$REGION
