--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -3,8 +3,6 @@
     description: >
         Creates a public OnMetal server and waits for it to become active.
 
-
-        OnMetal Production Capacity Dashboard: https://onmetal.ohthree.com/iad-m0002
     build-discarder:
         days-to-keep: 30
     node: 'slaves'
@@ -83,8 +81,30 @@
             colormap: xterm
     builders:
         - install-ansible
-        - onmetal-aio-action-builder:
+        - onmetal-aio-ansible-action-builder:
             tags: "{tags}"
+
+
+- job-template:
+    name: 'OnMetal-AIO-Deploy-RPC'
+    build-discarder:
+        days-to-keep: 30
+    concurrent: true
+    parameters:
+        - string:
+            name: RPC_TAG
+            default: r13.0.3
+        - node:
+            name: NODE
+            description: "OnMetal lab to build in"
+            ignore-offline-nodes: true
+            allowed-multiselect: true
+    wrappers:
+        - mask-passwords
+        - ansicolor:
+            colormap: xterm
+    builders:
+        - onmetal-aio-deploy-rpc
 
 - project:
     name: onmetal-all-in-one-deploy
@@ -102,6 +122,7 @@
     jobs:
         - 'OnMetal-AIO-Build-Host'
         - 'OnMetal-AIO-{deploy-action}'
+        - 'OnMetal-AIO-Deploy-RPC'
 
 - scm:
     name: jenkins-oa-scm
@@ -154,8 +175,8 @@
             ansible-playbook public-cloud-deploy.yml -i inventory/ --extra-vars "name=$SERVER_NAME flavor=$FLAVOR image=$IMAGE count=1 key_name=jenkins group=om-aio" --tags build --skip-tags always
 
 - builder:
-    name: onmetal-aio-action-builder
-    description: Runs all required host setup
+    name: onmetal-aio-ansible-action-builder
+    description: Runs deployment playbook with specified tags
     builders:
         - shell: |
             #!/bin/bash
@@ -169,3 +190,29 @@
             export ANSIBLE_HOST_KEY_CHECKING=False
 
             ansible-playbook public-cloud-deploy.yml -i inventory/ --extra-vars "name=$SERVER_NAME" --skip-tags build --tags {tags}
+
+- builder:
+    name: onmetal-aio-deploy-rpc
+    description: Runs all setup and deployment of RPC
+    builders:
+        - shell: |
+            #!/bin/bash -xe
+            rm -rf /opt/rpc-openstack
+
+            git clone -b $RPC_TAG --recursive https://github.com/rcbops/rpc-openstack /opt/rpc-openstack
+            cd  /opt/rpc-openstack
+
+            cp /etc/openstack_deploy/user_variables.yml /etc/openstack_deploy/user_variables.yml.bak
+            cp -R openstack-ansible/etc/openstack_deploy /etc
+            cp /etc/openstack_deploy/user_variables.yml.bak /etc/openstack_deploy/user_variables.yml
+
+            mv /etc/openstack_deploy/user_secrets.yml /etc/openstack_deploy/user_osa_secrets.yml
+            cp rpcd/etc/openstack_deploy/user_*_defaults.yml /etc/openstack_deploy
+            cp rpcd/etc/openstack_deploy/user_rpco_secrets.yml /etc/openstack_deploy
+            cp rpcd/etc/openstack_deploy/env.d/* /etc/openstack_deploy/env.d
+
+            export DEPLOY_ELK=no
+            export DEPLOY_HARDENING=no
+            export DEPLOY_TEMPEST=yes
+
+            ./scripts/deploy.sh
