--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -62,6 +62,9 @@
                 - IAD
                 - LON
         - string:
+            name: OSA_BRANCH
+            default: stable/mitaka
+        - string:
             name: OSA_OPS_REPO
             default: https://github.com/rcbops-qe/openstack-ansible-ops
         - string:
@@ -189,7 +192,7 @@
             export SERVER_NAME=${{SERVER_NAME:-"Jenkins-OM-AIO-$BUILD_NUMBER"}}
             export ANSIBLE_HOST_KEY_CHECKING=False
 
-            ansible-playbook public-cloud-deploy.yml -i inventory/ --extra-vars "name=$SERVER_NAME" --skip-tags build --tags {tags}
+            ansible-playbook public-cloud-deploy.yml -i inventory/ --extra-vars "name=$SERVER_NAME osa_branch=$OSA_BRANCH" --skip-tags build --tags {tags}
 
 - builder:
     name: onmetal-aio-deploy-rpc
