--- a/onmetal-all-in-one/deploy.yml
+++ b/onmetal-all-in-one/deploy.yml
@@ -217,5 +217,7 @@
             export DEPLOY_ELK=no
             export DEPLOY_HARDENING=no
             export DEPLOY_TEMPEST=yes
+            export DEFAULT_CONNECTION_PLUGIN_PATH=plugins/connection_plugins
+            export DEFAULT_TRANSPORT=ssh_retry
 
             ./scripts/deploy.sh
