--- a/onmetal-all-in-one/deploy-rpc.yml
+++ b/onmetal-all-in-one/deploy-rpc.yml
@@ -2,15 +2,15 @@
     name: onmetal-all-in-one-deploy-rpc
     deploy-action:
         - Setup-Host:
-            script: ./setup-host.sh
+            script: setup-host.sh
         - Setup-Cobbler:
-            script: ./setup-cobbler.sh
+            script: setup-cobbler.sh
         - Virtual-Networks:
-            script: ./setup-virsh-net.sh
+            script: setup-virsh-net.sh
         - Deploy-VMs:
-            script: ./deploy-vms.sh
+            script: deploy-vms.sh
         - OpenStack-Setup:
-            script: ./deploy-osa.sh
+            script: deploy-osa.sh
     jobs:
         - 'OnMetal-AIO-{deploy-action}'
         - 'OnMetal-AIO-Deploy-RPC'
@@ -28,9 +28,6 @@
             ignore-offline-nodes: true
             allowed-multiselect: true
         - string:
-            name: OSA_BRANCH
-            default: stable/mitaka
-        - string:
             name: OSA_OPS_REPO
             default: https://github.com/rcbops-qe/openstack-ansible-ops
         - string:
@@ -47,7 +44,6 @@
             url: $OSA_OPS_REPO
             branches:
                 - $OSA_OPS_BRANCH
-            basedir: openstack-ansible-ops
             wipe-workspace: false
     wrappers:
         - mask-passwords
@@ -87,7 +83,8 @@
             export OSA_BRANCH=$OSA_BRANCH
             export PARTITION_HOST=$PARTITION_HOST
             export RUN_OSA=false
-            ./{script}
+            export SSHKEY=$(sudo cat /root/.ssh/id_rsa.pub)
+            sudo ./{script}
 
 - builder:
     name: onmetal-aio-deploy-rpc
@@ -95,19 +92,19 @@
     builders:
         - shell: |
             #!/bin/bash -xe
-            rm -rf /opt/rpc-openstack
+            sudo rm -rf /opt/rpc-openstack
 
-            git clone -b $RPC_TAG --recursive https://github.com/rcbops/rpc-openstack /opt/rpc-openstack
+            sudo git clone -b $RPC_TAG --recursive https://github.com/rcbops/rpc-openstack /opt/rpc-openstack
             cd  /opt/rpc-openstack
 
-            cp /etc/openstack_deploy/user_variables.yml /etc/openstack_deploy/user_variables.yml.bak
-            cp -R openstack-ansible/etc/openstack_deploy /etc
-            cp /etc/openstack_deploy/user_variables.yml.bak /etc/openstack_deploy/user_variables.yml
+            sudo cp /etc/openstack_deploy/user_variables.yml /etc/openstack_deploy/user_variables.yml.bak
+            sudo cp -R openstack-ansible/etc/openstack_deploy /etc
+            sudo cp /etc/openstack_deploy/user_variables.yml.bak /etc/openstack_deploy/user_variables.yml
 
-            mv /etc/openstack_deploy/user_secrets.yml /etc/openstack_deploy/user_osa_secrets.yml
-            cp rpcd/etc/openstack_deploy/user_*_defaults.yml /etc/openstack_deploy
-            cp rpcd/etc/openstack_deploy/user_rpco_secrets.yml /etc/openstack_deploy
-            cp rpcd/etc/openstack_deploy/env.d/* /etc/openstack_deploy/env.d
+            sudo mv /etc/openstack_deploy/user_secrets.yml /etc/openstack_deploy/user_osa_secrets.yml
+            sudo cp rpcd/etc/openstack_deploy/user_*_defaults.yml /etc/openstack_deploy
+            sudo cp rpcd/etc/openstack_deploy/user_rpco_secrets.yml /etc/openstack_deploy
+            sudo cp rpcd/etc/openstack_deploy/env.d/* /etc/openstack_deploy/env.d
 
             export DEPLOY_ELK=no
             export DEPLOY_HARDENING=no
@@ -115,4 +112,4 @@
             export DEFAULT_CONNECTION_PLUGIN_PATH=plugins/connection_plugins
             export DEFAULT_TRANSPORT=ssh_retry
 
-            ./scripts/deploy.sh
+            sudo ./scripts/deploy.sh
