--- a/onmetal-all-in-one/deploy-rpc.yml
+++ b/onmetal-all-in-one/deploy-rpc.yml
@@ -80,7 +80,7 @@
             export PARTITION_HOST=$PARTITION_HOST
             export RUN_OSA=false
             export SSHKEY=$(sudo cat /root/.ssh/id_rsa.pub)
-            sudo ./{script}
+            sudo -E ./{script}
 
 - builder:
     name: onmetal-aio-deploy-rpc
