Adding sudo to test commands

--- a/onmetal-all-in-one/test.yml
+++ b/onmetal-all-in-one/test.yml
@@ -7,11 +7,9 @@
         days-to-keep: 30
     concurrent: true
     parameters:
-        - node:
+        - label:
             name: NODE
-            description: "OnMetal lab to build in"
-            ignore-offline-nodes: true
-            allowed-multiselect: true
+            description: "Name of Jenkins node to run on"
         - string:
             name: TEMPEST_TESTS
             default: scenario api defcore
@@ -20,9 +18,9 @@
     builders:
         - shell: |
             #!/bin/bash -ex
-            UTILITY_CONTAINER=$(ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-ls |grep utility)
-            ssh -T -oStrictHostKeyChecking=no infra2 sudo rm -rf /openstack/log/*_utility_*/*.xml
-            ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-attach -n "$UTILITY_CONTAINER" -v RUN_TEMPEST_OPTS='--serial' -- /opt/openstack_tempest_gate.sh ${TEMPEST_TESTS}
+            UTILITY_CONTAINER=$(sudo ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-ls |grep utility)
+            sudo ssh -T -oStrictHostKeyChecking=no infra2 sudo rm -rf /openstack/log/*_utility_*/*.xml
+            sudo ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-attach -n "$UTILITY_CONTAINER" -v RUN_TEMPEST_OPTS='--serial' -- /opt/openstack_tempest_gate.sh ${TEMPEST_TESTS}
     publishers:
         - postbuildscript:
             script-only-if-succeeded: false
@@ -34,8 +32,8 @@
 
                     rm -rf archive
                     mkdir archive
-                    UTILITY_CONTAINER=$(ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-ls |grep utility)
-                    (ssh -T -oStrictHostKeyChecking=no infra2 cat /openstack/log/$UTILITY_CONTAINER/*.xml) > archive/results.xml
+                    UTILITY_CONTAINER=$(sudo ssh -T -oStrictHostKeyChecking=no infra2 sudo lxc-ls |grep utility)
+                    (sudo ssh -T -oStrictHostKeyChecking=no infra2 cat /openstack/log/$UTILITY_CONTAINER/*.xml) > archive/results.xml
 
                     #don't return non-zero, ever.
                     :
